Bug 77476 - FILEASAVE : 'TIF' is changed to 'TIFF' in RT
Summary: FILEASAVE : 'TIF' is changed to 'TIFF' in RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Ravindra Vidhate
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks: Images-TIFF
  Show dependency treegraph
 
Reported: 2014-04-15 09:25 UTC by Ravindra Vidhate
Modified: 2019-06-29 01:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Original File (2.10 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-04-15 09:45 UTC, Ravindra Vidhate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ravindra Vidhate 2014-04-15 09:25:58 UTC
Problem description: 
The .TIF image is written as .TIFF while exporting the document from LO in DOCX format.


Steps to reproduce:
1. Open the attached file in LO which has images [.TIF] format
2. Save the document as DOCX 
3. Open the saved document in MS-Office or extract the content of the saved docx file. In [Content_Types].xml , .tif extension is changed to .tiff.

Current behavior:
In [Content_Types].xml , .tif extension is changed to .tiff.

Expected behavior:
In [Content_Types].xml , .tif extension should be preserved as it is i.e .tif.
Comment 1 Ravindra Vidhate 2014-04-15 09:45:05 UTC
Created attachment 97385 [details]
Original File
Comment 2 surbhi.tongia 2014-04-15 10:07:17 UTC
Verified On LO Build :libo-master~2014-04-14_08.54.29_LibreOfficeDev_4.3.0.0.alpha0_Win_x86.
Operating System :Windows.

In [Content_Types].xml , .tif extension is changed to .tiff after RT.
Comment 3 tommy27 2014-04-15 14:10:58 UTC
set status to NEW according to previous comment confirmation.

anyway, would you please explain what's the problem about having a .tiff extension rather than a .tif extension?

is this extension change responsible of any issue with the document?

TIFF file can be labele either with .tif or .tiff extension, just like JPEG that sometimes are shown with .jpg or jpeg extension
Comment 4 Ravindra Vidhate 2014-04-15 14:15:34 UTC
.TIF extension is used in MicroSoft Naming convention [3 char extension] standard 8.3.
The later on Microsoft adds the support for .TIFF.

The main issues is when you insert .TIF file into docx file in MS-OFfice and then saved[exported] in LO then .TIF file gets converted to .TIFF.

The document having .TIFF will not be showing images when open on XP and below.

We also need to do implementation of .TIFF similar to .TIF if required.
Comment 5 tommy27 2014-04-15 18:03:29 UTC
OK. thanks for info.

what about LibO 4.1.x or 4.2.x ? do they have the same issue as LibO 4.3 alpha?
Comment 6 Ravindra Vidhate 2014-04-16 05:36:03 UTC
Hi,

I have not tested on the versions 4.1.x and 4.2.x but feel that this versions will also have the same problem.
Comment 7 tommy27 2014-04-16 06:23:15 UTC
@Ravindra
just to make sure you know that, if you change status to ASSIGNED it means that you will work to provide a patch to fix the bug.

if it's not what you intended please revert status to NEW so another developer will take in charge of it.
Comment 8 Ravindra Vidhate 2014-04-16 06:43:19 UTC
Hi,

I have already submitted the patch for it. I am just waiting it to be merged. 

Once it is merged, I will update the issue with correct resolution.

Regards,
Ravindra
Comment 9 tommy27 2014-04-16 07:20:00 UTC
great!!! by the way you may test 4.1.x and 4.2.x downloading portable LibO versions from this page.

it would be interesting to know if bug affects just 4.3 alpha or even stable releases
Comment 10 Commit Notification 2014-04-16 15:54:16 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ccfc02f7691848284403d339ee17054169fbff1d

fdo#77476:FILE_SAVE : 'TIF' is changed to 'TIFF' in RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Jorendc 2014-04-25 20:23:36 UTC
Not reproducible anymore, tested using Windows 8.1 with LibreOffice Versie: 4.3.0.0.alpha1 
Build ID: 46cfcd5a05aa1d13fecd73f5a25b64b8d8dd6781

In [Content_Types].xml:

<Override PartName="/word/media/image8.tif" ContentType="image/tif"/>

Marking as RESOLVED FIXED

Kind regards,
Joren