fdo#77476:FILE_SAVE : 'TIF' is changed to 'TIFF' in RT

1. Open the attached file in LO which has images [.TIF] format
2. Save the document as DOCX
3. Open the saved document in MS-Office or extract the content of the saved docx file.
 In [Content_Types].xml , .tif extension is changed to .tiff.

Change-Id: I73baea9ad6cd991b04d47e23865b77432127a510